<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:layout_marginBottom="548dp"
        android:gravity="center_horizontal"
        android:text="@string/deleteacc"
        android:textColor="@color/red2"
        android:textSize="@dimen/deletemsg"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="131dp"
        android:layout_height="68dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="562dp"
        android:layout_marginEnd="254dp"
        android:layout_marginBottom="101dp"
        android:background="@color/delete"
        android:backgroundTint="@color/delete1btn"
        android:text="@string/delete"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="138dp"
        android:layout_height="69dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="561dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="101dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="188dp"
        android:layout_height="157dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="310dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_error_24" />

</androidx.constraintlayout.widget.ConstraintLayout>