<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="6dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="642dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="88dp"
        android:background="@color/purple_200"
        android:scrollbarSize="10dp"
        android:scrollbarThumbHorizontal="@color/black"
        android:scrollbarThumbVertical="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="169dp"
        android:layout_height="66dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="576dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="89dp"
        android:background="#2E1616"
        android:backgroundTint="@color/purple_200"
        android:backgroundTintMode="add"
        android:text="@string/Paynow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#B1A4A4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="165dp"
        android:layout_height="69dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="477dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="185dp"
        android:backgroundTint="@color/button1"
        android:text="@string/savecard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="104dp"
        android:layout_height="33dp"
        android:layout_marginStart="302dp"
        android:layout_marginTop="666dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="32dp"
        android:text="Rs.2559"
        android:textColor="@color/red"
        android:textColorLink="@color/red1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="61dp"
        android:layout_height="48dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="349dp"
        android:layout_marginBottom="683dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="357dp"
        android:layout_height="48dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="676dp"
        android:text="@string/fillcarddetails"
        android:textSize="@dimen/select"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="260dp"
        android:layout_height="49dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="666dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="16dp"
        android:text="@string/TotalAmount"
        android:textSize="@dimen/total"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="323dp"
        android:layout_height="61dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="106dp"
        android:layout_marginBottom="564dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Cardnumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="320dp"
        android:layout_height="63dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="472dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Nameoncard"
        android:textSize="@dimen/nameoncard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="177dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="302dp"
        android:layout_marginEnd="204dp"
        android:layout_marginBottom="379dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/MMYY"
        android:textSize="@dimen/mmyy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="183dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="393dp"
        android:layout_marginEnd="198dp"
        android:layout_marginBottom="296dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Cvv"
        android:textSize="@dimen/cvv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="96dp"
        android:layout_height="86dp"
        android:layout_marginStart="213dp"
        android:layout_marginTop="378dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="267dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cvv" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="272dp"
        android:layout_height="166dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="558dp"
        android:scrollbarSize="@dimen/cardno"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/visaamericanpreview" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="314dp"
        android:layout_height="65dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="542dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="124dp"
        android:text="*Save Securly in my account for subsequent transactions "
        android:textColor="@color/codtext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>