<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="104dp"
        android:layout_height="33dp"
        android:layout_marginStart="302dp"
        android:layout_marginTop="666dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="32dp"
        android:text="Rs.2559"
        android:textColor="#BA1818"
        android:textColorLink="#9F2C2C"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="357dp"
        android:layout_height="48dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="676dp"
        android:text="@string/method"
        android:textSize="@dimen/selectp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="61dp"
        android:layout_height="48dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="349dp"
        android:layout_marginBottom="683dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="343dp"
        android:layout_height="166dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="444dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/creditdebit" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="146dp"
        android:layout_height="142dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="363dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="226dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cashondel" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="223dp"
        android:layout_marginBottom="622dp"
        android:text="@string/card"
        android:textColor="@color/codtext"
        android:textSize="@dimen/creditdebit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="224dp"
        android:layout_marginBottom="387dp"
        android:text="@string/CashonDelivery"
        android:textColor="@color/codtext"
        android:textSize="@dimen/cod"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="369dp"
        android:layout_marginTop="202dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="505dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="371dp"
        android:layout_marginTop="444dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="263dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="552dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="152dp"
        android:text="@string/free"
        android:textColor="@color/white"
        android:textColorLink="#9F2C2C"
        android:textSize="@dimen/seee"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="260dp"
        android:layout_height="49dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="666dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="16dp"
        android:text="Total Amount-"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="6dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="642dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="88dp"
        android:background="@color/purple_200"
        android:scrollbarSize="10dp"
        android:scrollbarThumbHorizontal="@color/black"
        android:scrollbarThumbVertical="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="32dp"
        android:layout_height="28dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="615dp"
        android:layout_marginEnd="246dp"
        android:layout_marginBottom="88dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/northon" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="126dp"
        android:layout_height="68dp"
        android:layout_marginTop="598dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/visa" />

    <Button
        android:id="@+id/gocard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="274dp"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/gocash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        android:layout_marginTop="504dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="179dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewdetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="252dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="419dp"
        android:text="card details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>